--- a/src/AppBundle/Resources/translations/messages.ru.yml
+++ b/src/AppBundle/Resources/translations/messages.ru.yml
@@ -2,6 +2,7 @@
 developers: Веб-агентство CHEERS! Unlimited
 
 locale:
+  title: Языковые версии
   ua: На украинском
   en: На английском
   ru: На русском
@@ -12,61 +13,60 @@ state:
   browsers: Браузеры
   brasstApi: Br.Asst. API
 
+social:
+  title: Поделиться
+
+thanksgiving:
+  title: Благодарности
+  text: >
+    Выражаем благодарность замечательной
+    <a href="http://piwik.org" class="sSize" target="_blank">Piwik Team</a> и их продукту
+    <a href="https://github.com/piwik/device-detector" class="sSize" target="_blank">Device Detector</a>, учасникам
+    <a href="http://guzzle.readthedocs.org" class="sSize" target="_blank">проекта</a> PHP HTTP клиента
+    <a href="https://github.com/guzzle/guzzle" class="sSize" target="_blank">Guzzle</a>, а также сообществу свободной энциклопедии
+    <a href="https://www.wikipedia.org" class="sSize" target="_blank">Википедия</a> за их бескорыстный труд.
+
 copyright: >
-  © CHEERS! Unlimited, 2015. Все права защищены. Использование собственных материалов сайта без согласия его авторов запрещено.
+  © <a href='http://cheersunlimited.com.ua' target="_blank">CHEERS! Unlimited</a>, 2015. Все права сохранены.
+  Использование собственных материалов сайта без согласия его авторов запрещено.
+
+adjective:
+  from: от
+  for: для
 
 message:
-  standard: >
-    Вы используете браузер %browser% для операционной системы %osFamily%.
-    Версия вашего браузера - %clientVersionShort% (%clientVersion%)
-  standard_extended: >
-    Вы используете браузер %browser% от компании %vendor% для операционной системы %osFamily%.
-    Версия вашего браузера - %clientVersionShort% (%clientVersion%)
   outdated:
     title:
       О нет!
     text: >
-      Эта версия устарела, а значит, самое время обновить ее до новейшей %stableVersionShort% (%stableVersion%)!
-      Текущая же версия вполне может испортить впечатление от просмотра современных сайтов в сети Интернет
+      Вы используете устаревшую версию браузера, которая вполне может испортить впечатление от
+      просмотра современных сайтов в сети Интернет
   uptodate:
     title:
       Отлично!
     text: >
-      На данный момент это новейшая версия браузера
+      Вы используете новейшую версию браузера
   explorer: >
     Ох... Internet Explorer, хоть и по определенным причинам является популярным браузером, часто не позволяет
     пользователям в полной мере оценить работу разработчиков сайтов. Этого можно и не делать, но в некоторых случаях мы
     рекомендуем установить другой браузер, который, скорее всего, лучше справится с поставленными задачами и сделает
     вашу работу и развлечения в сети более комфортными
+  your_version: Ваша версия
+  latest_version: Последняя версия
 
 tooltip:
-  wrong_browser: >
-    Возможно, Br.Asst. ошибся, и на самом деле вы используете другой браузер, или другую его версию. В этом случае мы
-    будем весьма благодарны, если вы оставите для нас отзыв
   uninstall_browser: >
     Настоятельно рекомендуем удалить старую версию браузера перед установкой новой, сохранив при этом ваши настройки
     и данные о работе (большинство современных браузеров предлагают такую опцию)
 
 content_slogan:
-  headline: Только свежие браузеры с Br.Asst.
+  headline: Только свежие браузеры с <span class="sSize">Br.Asst.</span>
   subheadline: >
     Инструмент проверки и обновления вашего веб-браузера
 
-browser:
-  market_share:
-    Предпочитают %marketShare%% пользователей сети
-  stable_release:
-    Текущая версия
-  button_download:
-    Скачать
-  button_official_page:
-    на сайте разработчика
-  os:
-    Для операционных систем
-
 content_idea:
   title: >
-    Зачем вам нужен Br.Asst.?
+    Зачем вам нужен <span class="sSize">Br.Asst.</span>?
   text: >
     Несмотря на то, что браузеры научились обновлять себя не отвлекая людей от дел, многие до сих пор используют
     устаревшие версии подобных программ. Это приводит к тому, что для обладателей старых браузеров сайты и системы
@@ -76,9 +76,26 @@ content_idea:
     Мы, веб-агентство CHEERS! Unlimited, разработали Br.Asst. с целью заботы о наших клиентах и пользователях.
     Br.Asst. поможет вам узнать, не устарел ли ваш браузер, а также скачать последнюю версию любого из наиболее
     популярных на сегодняшний день.
+  download_browser: Скачать браузер
+
+browser:
+  title: Выберите свой браузер
+  tooltip: >
+    Кликните по желаемому браузеру, либо перетащите его сюда
+  market_share:
+    preffered: предпочитают
+    users: пользователей сети
+  stable_release:
+    Текущая версия
+  button_download:
+    Скачать
+  button_official_page:
+    на сайте разработчика
+  button_new_version:
+    новую версию
 
 content_api:
-  title: Вы можете использовать Br.Asst. для своих сайтов!
+  title: Вы можете использовать <span class="sSize">Br.Asst.</span> для своих сайтов!
   text: >
     Мы предоставляем бесплатное и простое API для разработчиков и веб-мастеров. Если вы хотите, чтобы ваши пользователи
     всегда были в курсе версии своего браузера, имели возможность буквально в 3 клика обновить её и увидеть ваши
@@ -86,7 +103,8 @@ content_api:
   guide:
     title: Вы можете получить данные в удобном для себя формате
     html:
-      title: Готовый HTML-виджет
+      title: Готовый <span class="sSize">HTML5</span>-виджет
+      title_short: HTML-виджет
       text: >
         С помощью предоставленного %jsLink% и простейшей интеграции вы получите уже готовый, нейтрально стилизованный
         виджет для встраивания на любую страницу вашего сайта. В случае, если версия браузера посетителя устарела,
@@ -94,17 +112,19 @@ content_api:
         от обновления, и он больше не увидит виджет при просмотре вашего сайта
       step:
         1: >
-          Вставьте зарезервированный для вывода блок сразу после открывающего тега <body> на странице,
-          которая должна отображать виджет
+          Вставьте зарезервированный для вывода блок сразу после открывающего тега <code class="sSize">&lt;body&gt;</code>
+          на странице, которая должна отображать виджет
         2: >
-          Подключите файл скрипта и его инициализацию перед закрывающим тегом </body> на той же странице
+          Подключите файл скрипта и его инициализацию перед закрывающим тегом <code class="sSize">&lt;/body&gt;</code>
+          на той же странице
         3: >
           Укажите последним параметром ссылки в инициализации скрипта нужный вам язык, который поддерживает
           Br.Asst., например
         final: >
           Готово!
     json:
-      title: Необходимые данные в формате JSON
+      title: Необходимые данные в формате <span class="sSize">JSON</span>
+      title_short: Данные в JSON
       text: >
         Вы можете получить только нужные данные и использовать их по собственному усмотрению. Объект будет содержать
         информацию, которую удалось собрать из User-Agent пользователя, а также данные о версии браузера клиента и
@@ -113,25 +133,27 @@ content_api:
       step:
         1: >
           Для того, чтобы получить ответ от Br.Asst. в формате JSON, необходимо сделать кросс-доменный GET-запрос по
-          адресу https://brasst.com/api/{locale} c дополнительным GET-параметром 'type=json'. Последний параметр ссылки
-          {locale} - нужный вам язык перевода для ошибок и предупреждений, который поддерживает Br.Asst, например
+          адресу <code class="sSize">https://brasst.com/api/{locale}</code> c дополнительным GET-параметром
+          <code class="sSize">'type=json'</code>. Последний параметр ссылки {locale} - нужный вам язык перевода для
+          ошибок и предупреждений, который поддерживает Br.Asst, например
         2: >
           Полученный объект будет иметь примерно следующий вид:
     additional: >
       Если вы испытываете затруднения со встраиванием HTML-виджета или кросс-доменным запросом для JSON,
       пожалуйста, ознакомьтесь с подробным описанием параметров и примерами в нашем репозитории на GitHub
-  github: Примеры использования на GitHub
 
 user_error_is_bot: >
   Жаль, но определить ваш браузер не удалось, так как, скорее всего вы - бот
 user_error_is_mobile: >
-  Жаль, но определить ваш браузер не удалось, так как мы пока не поддерживаем мобильные устройства
+  Жаль, но определить ваш браузер не удалось, так как Br.Asst. пока не поддерживает мобильные устройства
 user_error_not_browser: >
   Жаль, но определить ваш браузер не удалось, так как, скорее всего, ваш клиент - не веб-браузер
 
+nevermind_the_user_error: несмотря на это, мы надеемся, что вы еще сможете найти здесь что-нибудь интересное
+
 user_warning_unsupported_browser: >
-  Жаль, но мы пока поддерживаем только основные браузеры, и не можем ничего сказать касательно последней версии вашего
-  или предложить обновление
+  Жаль, но Br.Asst. пока поддерживает только основные браузеры,
+  и не можем ничего сказать касательно последней версии вашего или предложить обновление
 user_warning_unsupported_os: >
-  Браузер, который вы используете, официально не поддерживается вашей операционной системой. Зачем пользоваться
-  программой, от которой отказались её создатели? Самое время скачать и установить другой браузер!
+  Браузер, который вы используете, официально не поддерживается вашей операционной системой.
+  Зачем пользоваться программой, от которой отказались её создатели? Самое время скачать и установить другой браузер!
