--- a/src/AppBundle/Resources/translations/messages.ua.yml
+++ b/src/AppBundle/Resources/translations/messages.ua.yml
@@ -2,6 +2,7 @@
 developers: Веб-агентство CHEERS! Unlimited
 
 locale:
+  title: Мовні версії
   ua: Українською
   en: Англійською
   ru: Російською
@@ -12,61 +13,60 @@ state:
   browsers: Браузери
   brasstApi: Br.Asst. API
 
+social:
+  title: Поділитися
+
+thanksgiving:
+  title: Подяки
+  text: >
+    Висловлюємо подяку чудовій
+    <a href="http://piwik.org" class="sSize" target="_blank">Piwik Team</a> та їх продукту
+    <a href="https://github.com/piwik/device-detector" class="sSize" target="_blank">Device Detector</a>, учасникам
+    <a href="http://guzzle.readthedocs.org" class="sSize" target="_blank">проекту</a> PHP HTTP клієнта
+    <a href="https://github.com/guzzle/guzzle" class="sSize" target="_blank">Guzzle</a>, а також спільноті вільної енциклопедії
+    <a href="https://www.wikipedia.org" class="sSize" target="_blank">Вікіпедія</a> за за їх безкорисливу працю.
+
 copyright: >
-  © CHEERS! Unlimited, 2015. Усі права захищені. Використання власних матеріалів сайту без згоди його авторів заборонено.
+  © <a href='http://cheersunlimited.com.ua' target="_blank">CHEERS! Unlimited</a>, 2015. Усі права збережені.
+  Використання власних матеріалів сайту без згоди його авторів заборонено.
+
+adjective:
+  from: від
+  for: для
 
 message:
-  standard: >
-    Ви користуєтесь браузером %browser% для операційної системи %osFamily%.
-    Версія вашого браузеру - %clientVersionShort% (%clientVersion%)
-  standard_extended: >
-    Ви користуєтесь браузером %browser% від компанії %vendor% для операційної системи %osFamily%.
-    Версія вашого браузеру - %clientVersionShort% (%clientVersion%)
   outdated:
     title:
       О ні!
     text: >
-      Це версія застаріла, отже, саме час оновити її до нової %stableVersionShort% (%stableVersion%)!
-      Поточна ж версія цілком може зіпсувати враження від перегляду сучасних сайтів в мережі Інтернет
+      Ви використовуєте стару версію браузеру, яка цілком може зіпсувати враження від
+      перегляду сучасних сайтів в мережі Інтернет
   uptodate:
     title:
       Чудово!
     text: >
-      На даний момент це найбільш нова версія браузеру
+      Ви використовуєте найбільш нову версію браузеру
   explorer: >
     Ох... Internet Explorer, хоч і з певних причин є популярним браузером, часто не дозволяє користувачам у повній
     мірі оцінити роботу розробників сайтів. Цього можна і не робити, але в деяких випадках ми рекомендуємо встановити
     інший браузер, який, скоріш за все, краще виконає поставлені задачі та зробить вашу роботу та розваги в мережі
     більш комфортними
+  your_version: Ваша версія
+  latest_version: Остання версія
 
 tooltip:
-  wrong_browser: >
-    Можливо, Br.Asst. помилився, і ви насправді користуєтесь іншим браузером, або іншою його версією. В такому разі
-    ми будемо вельми вдячні, якщо ви залишите для нас відгук
   uninstall_browser: >
     Наполегливо радимо видалити стару версію браузеру перед встановленням нової, зберігши при цьому ваші налаштування
     й дані про роботу (більшість сучасних браузерів пропонують таку опіцію)
 
 content_slogan:
-  headline: Тільки свіжі браузери з Br.Asst.
+  headline: Тільки свіжі браузери з <span class="sSize">Br.Asst.</span>
   subheadline: >
     Інструмент перевірки та оновлення вашого веб-браузеру
 
-browser:
-  market_share:
-    Віддають перевагу %marketShare%% користувачів мережі
-  stable_release:
-    Поточна версія
-  button_download:
-    Скачати
-  button_official_page:
-    на сайті розробника
-  os:
-    Для операційних систем
-
 content_idea:
   title: >
-    Навіщо вам потрібен Br.Asst.?
+    Навіщо вам потрібен <span class="sSize">Br.Asst.</span>?
   text: >
     Незважаючи на те, що браузери навчились оновлювати себе не відволікаючи людей від справ, багато хто і сьогодні
     використовує застарілі версії подібних програм. Це призводить до того, що для власників старих браузерів сайти та
@@ -76,9 +76,26 @@ content_idea:
     Ми, веб-агентство CHEERS! Unlimited, розробили Br.Asst. з метою турботи про наших клієнтів і користувачів.
     Br.Asst. допоможе вам дізнатися, чи не застарів ваш браузер, а також завантажити останню версію будь-якого з
     найбільш популярних на сьогоднішній день.
+  download_browser: Скачати браузер
+
+browser:
+  title: Оберіть свій браузер
+  tooltip: >
+    Клацніть по бажаному браузеру, або перетягніть його сюди
+  market_share:
+    preffered: віддають перевагу
+    users: користувачів мережі
+  stable_release:
+    Поточна версія
+  button_download:
+    Скачати
+  button_official_page:
+    на сайті розробника
+  button_new_version:
+    нову версію
 
 content_api:
-  title: Ви можете використовувати Br.Asst. для своїх сайтів!
+  title: Ви можете використовувати <span class="sSize">Br.Asst.</span> для своїх сайтів!
   text: >
     Ми надаємо безкоштовне та просте API для розробників та веб-майстрів. Якщо ви хочете, щоб ваші користувачі завжди
     були в курсі версії свого браузера, мали можливість буквально у 3 кліка оновити її та побачити ваші проекти
@@ -86,7 +103,8 @@ content_api:
   guide:
     title: Ви можете отримати дані в зручному для себе форматі
     html:
-      title: Готовий HTML-віджет
+      title: Готовий <span class="sSize">HTML5</span>-віджет
+      title_short: HTML-віджет
       text: >
         За допомогою наданого %jsLink% та найпростішої інтеграції ви отримаєте вже готовий, нейтрально стилізований
         віджет для вбудовування на будь-яку сторінку вашого сайту. У випадку, якщо версія браузера користувача
@@ -94,17 +112,19 @@ content_api:
         відмовитись від оновлення, і він більше не побачить віджет при перегляді вашого сайту
       step:
         1: >
-          Вставте зарезервований для виводу блок одразу після відкриваючого тега <body> на сторінці, що має
-          відображати віджет
+          Вставте зарезервований для виводу блок одразу після відкриваючого тега <code class="sSize">&lt;body&gt;</code>
+          на сторінці, що має відображати віджет
         2: >
-          Підключіть файл скрипта та його ініціалізацію перед закриваючим тегом </body> на тій же сторінці
+          Підключіть файл скрипта та його ініціалізацію перед закриваючим тегом <code class="sSize">&lt;/body&gt;</code>
+          на тій же сторінці
         3: >
           Вкажіть останнім параметром посилання в ініціалізації скрипта потрібну вам мову, яку підтримує
           Br.Asst., наприклад
         final: >
           Готово!
     json:
-      title: Необхідні дані в форматі JSON
+      title: Необхідні дані в форматі <span class="sSize">JSON</span>
+      title_short: Дані в JSON
       text: >
         Ви можете отримати тільки необхідні дані та використовувати їх на власний розсуд. Об'єкт буде містити
         інформацію, яку вдалось зібрати з User-Agent користувача, а також дані про версію браузеру клієнта та її
@@ -113,25 +133,27 @@ content_api:
       step:
         1: >
           Для того, щоб отримати відповідь від Br.Asst. у форматі JSON, необхідно мати крос-доменний GET-запит за
-          адресою https://brasst.com/api/{locale} з додатковим GET-параметром 'type=json'. Останній параметр посилання
-          {locale} - необхідна вам мова перекладу для помилок та попереджень, яку підтримує Br.Asst, наприклад
+          адресою <code class="sSize">https://brasst.com/api/{locale}</code> з додатковим GET-параметром
+          <code class="sSize">'type=json'</code>. Останній параметр посилання {locale} - необхідна вам мова перекладу
+          для помилок та попереджень, яку підтримує Br.Asst, наприклад
         2: >
           Отриманий об'єкт буде мати приблизно наступний вигляд:
     additional: >
       Якщо у вас виникають труднощі зі вбудовуванням HTML-віджету або крос-доменним запитом для JSON,
       будь ласка, ознайомтеся з детальним описом параметрів й прикладами у нашому репозиторії на GitHub
-  github: Приклади використання на GitHub
 
 user_error_is_bot: >
   Шкода, але визначити ваш браузер не вдалося, оскільки, скоріш за все ви - бот
 user_error_is_mobile: >
-  Шкода, але визначити ваш браузер не вдалося, оскільки ми поки що не підтримуємо мобільні пристрої
+  Шкода, але визначити ваш браузер не вдалося, оскільки Br.Asst. поки що не підтримує мобільні пристрої
 user_error_not_browser: >
   Шкода, але визначити ваш браузер не вдалося, оскільки, скоріш за все, ваш клієнт - не веб-браузер
 
+nevermind_the_user_error: незважаючи на це, сподіваємось, що ви ще зможете знайти тут щось цікаве
+
 user_warning_unsupported_browser: >
-  Шкода, але поки що ми підтримуємо тільки основні браузери, і не можемо нічого сказати стосовно останньої версії
-  вашого або запропонувати оновлення
+  Шкода, але поки що Br.Asst. підтримує тільки основні браузери,
+  і не можемо нічого сказати стосовно останньої версії вашого або запропонувати оновлення
 user_warning_unsupported_os: >
-  Браузер, що ви використовуєте, офіційно не підтримується вашою операційною системою. Навіщо користуватись програмою,
-  від якої відмовились її творці? Саме час завантажити й встановити інший браузер!
+  Браузер, що ви використовуєте, офіційно не підтримується вашою операційною системою.
+  Навіщо користуватись програмою, від якої відмовились її творці? Саме час завантажити й встановити інший браузер!
