--- a/src/AppBundle/Resources/translations/messages.ua.yml
+++ b/src/AppBundle/Resources/translations/messages.ua.yml
@@ -27,7 +27,7 @@ thanksgiving:
     <a href="https://www.wikipedia.org" class="sSize" target="_blank">Вікіпедія</a> за за їх безкорисливу працю.
 
 copyright: >
-  © <a href='http://cheersunlimited.com.ua' target="_blank">CHEERS! Unlimited</a>, 2015. Усі права збережені.
+  © <a href='http://cheersunlimited.com.ua/%locale%' target="_blank">CHEERS! Unlimited</a>, 2015. Усі права збережені.
   Використання власних матеріалів сайту без згоди його авторів заборонено.
 
 adjective:
@@ -47,7 +47,7 @@ message:
     text: >
       Ви використовуєте найбільш нову версію браузеру
   explorer: >
-    Ох... Internet Explorer, хоч і з певних причин є популярним браузером, часто не дозволяє користувачам у повній
+    <span>Ох...</span> Internet Explorer, хоч і з певних причин є популярним браузером, часто не дозволяє користувачам у повній
     мірі оцінити роботу розробників сайтів. Цього можна і не робити, але в деяких випадках ми рекомендуємо встановити
     інший браузер, який, скоріш за все, краще виконає поставлені задачі та зробить вашу роботу та розваги в мережі
     більш комфортними
@@ -58,6 +58,9 @@ tooltip:
   uninstall_browser: >
     Наполегливо радимо видалити стару версію браузеру перед встановленням нової, зберігши при цьому ваші налаштування
     й дані про роботу (більшість сучасних браузерів пропонують таку опіцію)
+  api_drag: >
+    Оберіть бажаний тип <span class="sSize">API</span> за допомогою <span class="sSize">переміщення повзунка</span>
+    в його сторону
 
 content_slogan:
   headline: Тільки свіжі браузери з <span class="sSize">Br.Asst.</span>
@@ -69,14 +72,16 @@ content_idea:
     Навіщо вам потрібен <span class="sSize">Br.Asst.</span>?
   text: >
     Незважаючи на те, що браузери навчились оновлювати себе не відволікаючи людей від справ, багато хто і сьогодні
-    використовує застарілі версії подібних програм. Це призводить до того, що для власників старих браузерів сайти та
-    системи в мережі будуть працювати та виглядати не так, як це було задумано їх творцями. Не варто псувати собі
-    враження - краще завжди використовувати останні версії браузерів!
+    використовує %accent_opening%застарілі%accent_closing% версії подібних програм. Це призводить до того, що для
+    %accent_opening%власників старих%accent_closing% браузерів сайти та системи в мережі будуть працювати та виглядати
+    %accent_opening%не так%accent_closing%, як це було задумано їх творцями. Не варто псувати собі враження - краще
+    завжди використовувати %accent_opening%останні%accent_closing% версії браузерів!
   about: >
-    Ми, веб-агентство CHEERS! Unlimited, розробили Br.Asst. з метою турботи про наших клієнтів і користувачів.
-    Br.Asst. допоможе вам дізнатися, чи не застарів ваш браузер, а також завантажити останню версію будь-якого з
-    найбільш популярних на сьогоднішній день.
-  download_browser: Скачати браузер
+    Ми, веб-агентство <a href="http://cheersunlimited.com.ua/%locale%" target="_blank">CHEERS! Unlimited</a>,
+    розробили %accent_opening%Br.Asst.%accent_closing% з метою турботи про наших клієнтів і користувачів. Br.Asst.
+    %accent_opening%допоможе вам%accent_closing% дізнатися, чи не застарів ваш браузер, а також
+    %accent_opening%завантажити%accent_closing% останню версію будь-якого з найбільш популярних на сьогоднішній день.
+  download_browser: Скачати браузери
 
 browser:
   title: Оберіть свій браузер
@@ -89,10 +94,8 @@ browser:
     Поточна версія
   button_download:
     Скачати
-  button_official_page:
-    на сайті розробника
-  button_new_version:
-    нову версію
+  button_update:
+    Оновити
 
 content_api:
   title: Ви можете використовувати <span class="sSize">Br.Asst.</span> для своїх сайтів!
@@ -100,6 +103,7 @@ content_api:
     Ми надаємо безкоштовне та просте API для розробників та веб-майстрів. Якщо ви хочете, щоб ваші користувачі завжди
     були в курсі версії свого браузера, мали можливість буквально у 3 кліка оновити її та побачити ваші проекти
     такими, якими вони мають бути - приєднуйтесь!
+  tooltip: Вправо чи вліво?
   guide:
     title: Ви можете отримати дані в зручному для себе форматі
     html:
@@ -138,9 +142,12 @@ content_api:
           для помилок та попереджень, яку підтримує Br.Asst, наприклад
         2: >
           Отриманий об'єкт буде мати приблизно наступний вигляд:
+        final: >
+          Тепер з даними можна працювати!
     additional: >
       Якщо у вас виникають труднощі зі вбудовуванням HTML-віджету або крос-доменним запитом для JSON,
       будь ласка, ознайомтеся з детальним описом параметрів й прикладами у нашому репозиторії на GitHub
+  github: Приклади на GitHub
 
 user_error_is_bot: >
   Шкода, але визначити ваш браузер не вдалося, оскільки, скоріш за все ви - бот
@@ -153,7 +160,7 @@ nevermind_the_user_error: незважаючи на це, сподіваємос
 
 user_warning_unsupported_browser: >
   Шкода, але поки що Br.Asst. підтримує тільки основні браузери,
-  і не можемо нічого сказати стосовно останньої версії вашого або запропонувати оновлення
+  і не може нічого сказати стосовно останньої версії вашого або запропонувати оновлення
 user_warning_unsupported_os: >
   Браузер, що ви використовуєте, офіційно не підтримується вашою операційною системою.
   Навіщо користуватись програмою, від якої відмовились її творці? Саме час завантажити й встановити інший браузер!
