--- a/src/AppBundle/Resources/translations/messages.ua.yml
+++ b/src/AppBundle/Resources/translations/messages.ua.yml
@@ -116,14 +116,11 @@ content_api:
         відмовитись від оновлення, і він більше не побачить віджет при перегляді вашого сайту
       step:
         1: >
-          Вставте зарезервований для виводу блок одразу після відкриваючого тега <code class="sSize">&lt;body&gt;</code>
-          на сторінці, що має відображати віджет
+          Підключіть файл скрипта перед закриваючим тегом <code class="sSize">&lt;/body&gt;</code> на сторінці, що має
+          відображати віджет:
         2: >
-          Підключіть файл скрипта та його ініціалізацію перед закриваючим тегом <code class="sSize">&lt;/body&gt;</code>
-          на тій же сторінці
-        3: >
-          Вкажіть останнім параметром посилання в ініціалізації скрипта потрібну вам мову, яку підтримує
-          Br.Asst., наприклад
+          Ініціалізуйте скрипт одразу після підключення. Додатково ви можете вказати необхідну вам мову, яку підтримуює
+          Br.Asst., за допомогою параметра <code class="sSize">locale</code> у функції-конструкторі:
         final: >
           Готово!
     json:
@@ -137,9 +134,8 @@ content_api:
       step:
         1: >
           Для того, щоб отримати відповідь від Br.Asst. у форматі JSON, необхідно мати крос-доменний GET-запит за
-          адресою <code class="sSize">https://brasst.com/api/{locale}</code> з додатковим GET-параметром
-          <code class="sSize">'type=json'</code>. Останній параметр посилання {locale} - необхідна вам мова перекладу
-          для помилок та попереджень, яку підтримує Br.Asst, наприклад
+          адресою <code class="sSize">https://brasst.net.ua/api</code> з додатковим GET-параметром
+          <code class="sSize">'type=json'</code>:
         2: >
           Отриманий об'єкт буде мати приблизно наступний вигляд:
         final: >
@@ -148,6 +144,22 @@ content_api:
       Якщо у вас виникають труднощі зі вбудовуванням HTML-віджету або крос-доменним запитом для JSON,
       будь ласка, ознайомтеся з детальним описом параметрів й прикладами у нашому репозиторії на GitHub
   github: Приклади на GitHub
+
+widget:
+  version: версія
+  message:
+    outdated: >
+      Доступна нова версія вашого браузеру
+    deprecated: >
+      Цей браузер не підтримується на вашій операційній системі
+  button:
+    outdated: >
+      оновити
+    deprecated: >
+      дізнатися більше
+  forget: >
+    Якщо ви більше не бажаєте бачити дане повідомлення, %opening_tag%натисніть сюди%closing_tag%
+  close: Закрити
 
 user_error_is_bot: >
   Шкода, але визначити ваш браузер не вдалося, оскільки, скоріш за все ви - бот
