--- a/src/AppBundle/Resources/translations/messages.ru.yml
+++ b/src/AppBundle/Resources/translations/messages.ru.yml
@@ -116,14 +116,11 @@ content_api:
         от обновления, и он больше не увидит виджет при просмотре вашего сайта
       step:
         1: >
-          Вставьте зарезервированный для вывода блок сразу после открывающего тега <code class="sSize">&lt;body&gt;</code>
-          на странице, которая должна отображать виджет
+          Подключите файл скрипта перед закрывающим тегом <code class="sSize">&lt;/body&gt;</code> на странице, которая
+          должна отображать виджет:
         2: >
-          Подключите файл скрипта и его инициализацию перед закрывающим тегом <code class="sSize">&lt;/body&gt;</code>
-          на той же странице
-        3: >
-          Укажите последним параметром ссылки в инициализации скрипта нужный вам язык, который поддерживает
-          Br.Asst., например
+          Инициализируйте скрипт сразу после подключения. Дополнительно вы можете указать необходимый вам язык, который
+          поддерживает Br.Asst., с помощью параметра <code class="sSize">locale</code> в функции-конструкторе:
         final: >
           Готово!
     json:
@@ -137,9 +134,8 @@ content_api:
       step:
         1: >
           Для того, чтобы получить ответ от Br.Asst. в формате JSON, необходимо сделать кросс-доменный GET-запрос по
-          адресу <code class="sSize">https://brasst.com/api/{locale}</code> c дополнительным GET-параметром
-          <code class="sSize">'type=json'</code>. Последний параметр ссылки {locale} - нужный вам язык перевода для
-          ошибок и предупреждений, который поддерживает Br.Asst, например
+          адресу <code class="sSize">https://brasst.net.ua/api</code> c дополнительным GET-параметром
+          <code class="sSize">'type=json'</code>:
         2: >
           Полученный объект будет иметь примерно следующий вид:
         final: >
@@ -148,6 +144,22 @@ content_api:
       Если вы испытываете затруднения со встраиванием HTML-виджета или кросс-доменным запросом для JSON,
       пожалуйста, ознакомьтесь с подробным описанием параметров и примерами в нашем репозитории на GitHub
     github: Примеры на GitHub
+
+widget:
+  version: версия
+  message:
+    outdated: >
+      Доступна новая версия вашего браузера
+    deprecated: >
+      Этот браузер не поддерживается на вашей операционной системе
+  button:
+    outdated: >
+      обновить
+    deprecated: >
+      узнать больше
+  forget: >
+    Если вы не хотите больше видеть данное уведомление, %opening_tag%нажмите сюда%closing_tag%
+  close: Закрыть
 
 user_error_is_bot: >
   Жаль, но определить ваш браузер не удалось, так как, скорее всего вы - бот
